--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -15,6 +15,7 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - RewardAdded
+        - RewardClaimed
       abis:
         - name: BribeV3
           file: ./abis/BribeV3.json
@@ -37,6 +38,8 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - RewardAdded
+        - FeeUpdated
+        - RewardClaimed
       abis:
         - name: yBribeV3
           file: ./abis/yBribeV3.json
@@ -62,7 +65,8 @@ dataSources:
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - RewardAdded
+        - NewReward
+        - UpdatedFee
       abis:
         - name: Votium
           file: ./abis/Votium.json
@@ -72,3 +76,29 @@ dataSources:
         - event: UpdatedFee(uint256)
           handler: handleUpdatedFee
       file: ./src/mappings-votium.ts
+  - kind: ethereum
+    name: StakeDAO
+    network: mainnet
+    source:
+      address: "0x1a8847c80fdc06b86b7b02670fdf6f7e47781594"
+      abi: Platform
+      startBlock: 15983901
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - RewardAdded
+      abis:
+        - name: Platform
+          file: ./abis/Platform.json
+      eventHandlers:
+        - event: BribeCreated(indexed uint256,indexed address,address,indexed address,uint8,uint256,uint256,uint256,bool)
+          handler: handleBribeCreated
+        - event: Claimed(indexed address,indexed address,indexed uint256,uint256,uint256)
+          handler: handleClaimed
+        - event: BribeClosed(uint256,uint256)
+          handler: handleBribeClosed
+        - event: PeriodRolledOver(uint256,uint256,uint256,uint256)
+          handler: handlePeriodRolledOver
+      file: ./src/mappings-std.ts
